ansible/oracle/roles/kube-manifest/templates/oracle-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oracle-default
