ansible/oracle/roles/kube-manifest/templates/oracle-res.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oracle-default
