ansible/oracle/roles/kube-manifest/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
      - name: authelia
        image: docker.io/authelia/authelia
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: authelia-vol
          mountPath: /var/authelia
      volumes:
      - name: authelia-vol
        emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-svc
  namespace: authelia-ns
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: authelia
