ansible/oracle/roles/kube-manifest/templates/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk11
        ports:
        - containerPort: 8088
        volumeMounts:
        - name: jenkins-vol
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-vol
        existingClaim: jenkins-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: jenkins-ns
spec:
  ports:
  - port: 8088
    targetPort: 8088
  selector:
    app: jenkins
