ansible/oracle/roles/kube-manifest/templates/libreddit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libreddit
  namespace: oracle-default
  labels:
    app: libreddit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libreddit
  template:
    metadata:
      labels:
        app: libreddit
    spec:
      containers:
      - name: libreddit
        image: docker.io/spikecodes/libreddit:arm
        command: ["libreddit"]
        args: ["--port", "8090"]
        ports:
        - containerPort: 8090
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: libreddit-service
  namespace: oracle-default
spec:
  selector:
    app: libreddit
  ports:
    - name: http
      protocol: TCP
      port: 8090
      targetPort: 8090
