ansible/oracle/roles/kube-manifest/templates/synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: oracle-default
  labels:
    app: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
      - name: synapse
        image: docker.io/matrixdotorg/synapse:latest
        ports:
        - containerPort: 8008
        volumeMounts:
        - mountPath: /data
          name: oracle-pv
          subPath: synapse
      restartPolicy: Always
      volumes:
      - name: oracle-pv
        persistentVolumeClaim:
          claimName: oracle-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: synapse-service
spec:
  selector:
    app: synapse
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
