ansible/oracle/roles/kube-manifest/templates/traefik-helm-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: internal
  namespace: oracle-default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ludwig.alcock.dev`) && PathPrefix(`/.well-known`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
