ansible/oracle/roles/kube-manifest/templates/traefik-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: oracle-default
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: docker.io/traefik:v2.0
        ports:
          - name: web
            containerPort: 8000
          - name: websecure
            containerPort: 4443
          - name: admin
            containerPort: 8080
        args:
          - --api.insecure
          - --accesslog
          - --entrypoints.web.Address=:8000
          - --entrypoints.websecure.Address=:4443
          - --providers.kubernetescrd
          #- --certificatesresolvers.default.acme.tlschallenge
          #- --certificatesresolvers.default.acme.email=foo@you.com
          #- --certificatesresolvers.default.acme.storage=acme.json
          # Please note that this is the staging Let's Encrypt server.
          # Once you get things working, you should remove that whole line altogether.
          #- --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: oracle-default
  #annotations: 
    #kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Path(`/libreddit`)
      kind: Rule
      services:
        - name: libreddit-service
          namespace: oracle-default
          port: 8080
    - match: Path(`/searx`)
      kind: Rule
      services:
        - name: searx-service
          namespace: oracle-default
          port: 8080
